# rust_learning

./: .env  .gitignore  Cargo.toml  README.md  Rocket.toml
src/: main.rs  request.http  service.rs  utils.rs
